# python-defi-research-engine

./: .gitignore  README.md  pyproject.toml
scripts/: asset_to_price_feed.py  assets.md  jsonl_to_json_converter.py  liquidation_call_event_researcher.py  liquidation_call_events_collector_raw_data.py  outdated_aggregatorCall.py  phases_researcher.py  priceReader.py  roundDataCollector.py
